--- a/components/style.css
+++ b/components/style.css
@@ -97,6 +97,7 @@ ul {
   color: #505e65;
   font-weight: bold;
   text-decoration: none;
+  margin-top: 5px;
 
 }
 
@@ -117,16 +118,25 @@ ul {
   font-size: 0.8em;
 }
 .mini-project {
-  text-decoration: underline;
-  text-decoration-color: rgb(83, 182, 208);
+  /*background-image: linear-gradient(rgb(83, 182, 208) 0 0);*/
+  background-image: linear-gradient(0deg, rgb(83, 182, 208), rgb(83, 182, 208) 100%);
+  background-size: 100% 50%; /* .08em is our fixed height; modify as needed. */
+  /*background-position: 100% 80%;*/
+  background-repeat: no-repeat;
+  /*transition: background-size .25s, background-position .25s .25s;*/
+  background-position-y: calc(200% - 1px);
+  transition: background-position-y 0.25s ease 0s;
+  display: inline-block;
+
 
 }
 
 .mini-project:hover {
-  transition: background-size .3s .3s, background-position-y 0.3s 0;
-  background-size: 200% 40%;
+  /*transition: background-size .25s .25s, background-position .25s;*/
+  transition: background-position-y 0.25s ease 0s;
+  background-size: 100% 50%;
   background-position: 100% 80%;
-  /* position: absolute; */
+  display: inline-block;
 }
 
 .date {
